Connections Classes Done! and Changed Version too!

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 1.4
+ * @version 3
  */
 
 /* Main Background */
@@ -462,20 +462,39 @@
     background-color: transparent;
 }
 
-.accountList-Wii_T5 {
-    background-color: transparent;
-}
-
 .accountBtn-3pgcgr {
     margin-right: 0px;
     margin-bottom: 0px;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i {
+.connectContainer-1hylYM {
+    background-color: transparent;
+}
+
+.connectContainer-1hylYM a {
+    color: lightcoral;
+    font-weight: 700;
+}
+
+.dropsHelpText-1HyiYF {
+    background: rgba(0, 0, 0, .3);
+}
+
+.dropsHelpText-1HyiYF a,
+.promotionCard-mo7ClH a {
+    color: lightcoral;
+    font-weight: 700;
+}
+
+.accountAddInner-2y9WLL {
+    color: white;
+}
+
+.accountButtonInner-33vCDY {
     background-color: #912;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i:hover {
+.accountButtonInner-33vCDY:hover {
     background-color: #C13;
 }
 
