--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 1.4
+ * @version 3
  */
 
  .app-2CXKsg {
@@ -2106,21 +2106,40 @@
     background-color: rgba(0, 0, 0, 0.48);
 }
 
-.accountList-Wii_T5 {
+.connectContainer-1hylYM {
     background-color: transparent;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i {
+.connectContainer-1hylYM a,
+.promotionCard-mo7ClH a {
+    color: #94CEE6;
+    font-weight: 700;
+}
+
+.dropsHelpText-1HyiYF {
+    background: rgba(0, 0, 0, .3);
+}
+
+.dropsHelpText-1HyiYF a {
+    color: #94CEE6;
+    font-weight: 700;
+}
+
+.accountAddInner-2y9WLL {
+    color: white;
+}
+
+.accountButtonInner-33vCDY {
     background-color: rgba(97, 164, 216, .47);
     border: 2px solid transparent;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i:hover {
+.accountButtonInner-33vCDY:hover {
     background-color: #76AAD9;
     border: 2px outset #76AAD9;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i:active {
+.accountButtonInner-33vCDY:active {
     background-color: rgba(97, 164, 216, .63);
     border: 2px inset #61A5D8;
 }
