--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 1.4
+ * @version 3
  */
 
  #app-mount .app-2CXKsg {
@@ -2555,7 +2555,7 @@
   background-color: transparent;
 }
 
-.accountList-Wii_T5,
+
 .connection-YOVI9j {
   background-color: rgba(155, 39, 66, .30);
   border-radius: 4px;
@@ -2565,12 +2565,36 @@
   background: transparent;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i {
+.connectContainer-1hylYM {
+  background-color: rgba(155, 39, 66, .30);
+  border-radius: 4px;
+}
+
+.connectContainer-1hylYM a {
+  color: #F57673;
+  font-weight: 700;
+}
+
+.dropsHelpText-1HyiYF {
+  background: rgb(0, 0, 0, .2);
+}
+
+.dropsHelpText-1HyiYF a,
+.promotionCard-mo7ClH a {
+  color: #F57673;
+  font-weight: 700;
+}
+
+.accountAddInner-2y9WLL {
+  color: white;
+}
+
+.accountButtonInner-33vCDY {
   background-color: #9b2742;
   border: 3px solid transparent;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i:hover {
+.accountButtonInner-33vCDY:hover {
   background-color: rgba(173, 57, 80, .51);
   border: 3px outset #ad3950;
 }
