--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -3133,3 +3133,55 @@
 .theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
   border-top-color: darkblue;
 }
+
+.connectContainer-1hylYM {
+    background-color: transparent;
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
+    background-image: radial-gradient(circle closest-side at 80px 60px, rgba(255, 255, 255, .65) 10%, rgba(13, 170, 255, 0.12) 100%, rgba(13, 170, 255, 0.12) 100%) !important;
+    border-radius: 9pc;
+    padding: 3pc;
+}
+
+.connectContainer-1hylYM a,
+.dropsHelpText-1HyiYF a {
+    color: gold;
+}
+
+.connection-YOVI9j {
+    background-color: transparent;
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
+    background-image: radial-gradient(circle closest-side at 130px 90px, rgba(255, 255, 255, .65) 10%, rgba(13, 170, 255, 0.12) 100%, rgba(13, 170, 255, 0.12) 100%) !important;
+    border-radius: 90pc;
+    width:  130%;
+    padding: 80px 130px 80px 130px;
+    margin-left: -30px;
+}
+
+.connectionHeader-Ixbb1s {
+    background: transparent;
+}
+
+.integration-1qC-fv {
+    border-radius: 30px;
+    background-color: transparent;
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
+    background-image: radial-gradient(circle closest-side at 0px 0px, rgba(255, 255, 255, .65) 10%, rgba(13, 170, 255, 0.12) 100%, rgba(13, 170, 255, 0.12) 100%) !important;
+}
+
+.inner-1lPVFp,
+.accountAddInner-2y9WLL {
+    border-radius: 40px;
+}
+
+.accountAddInner-2y9WLL {
+    color: white;
+}
+
+.accountButtonInner-33vCDY {
+    background-color: transparent !important;
+    box-shadow: inset 3px 3px 4px 3px rgba(153, 213, 245, 0.63), inset -8px -11px 9px -16px rgba(153, 213, 245, 0.53);
+}
+
+.accountButtonInner-33vCDY:hover {
+    box-shadow: inset 3px 3px 4px 3px rgba(243, 250, 254, 0.63), inset -8px -11px 9px -16px rgba(243, 250, 254, 0.53);
+}
