--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 1.4
+ * @version 3
  */
 
 /* Main Background */
@@ -528,9 +528,6 @@
     background-color: #2B5;
 }
 
-.accountList-Wii_T5 {
-    background-color: transparent;
-}
 
 .connectionHeader-Ixbb1s {
     background: none;
@@ -540,12 +537,31 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i {
+.connectContainer-1hylYM {
+    background-color: transparent;
+}
+
+.connectContainer-1hylYM a {
+    color: lightgreen;
+    font-weight: 700;
+}
+
+.dropsHelpText-1HyiYF {
+    background: rgba(0, 0, 0, .3);
+}
+
+.dropsHelpText-1HyiYF a,
+.promotionCard-mo7ClH a {
+    color: lightgreen;
+    font-weight: 700;
+}
+
+.accountButtonInner-33vCDY {
     background-color: rgba(34, 170, 187, .4);
     border: 2px solid #2AB;
 }
 
-.accountBtn-3pgcgr .accountBtnInner-3ttD-i:hover {
+.accountButtonInner-33vCDY:hover {
     background-color: rgb(17, 187, 204, .8);
     border: 2px solid #1BC;
 }
