--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 3
+ * @version 3.1
  */
 
 /* Main Background */
@@ -97,6 +97,10 @@
 
 .imageUploaderInner-IIRaFr, .imageUploaderIcon-2OHmFu {
     border-radius: 6px;
+}
+
+.imageUploaderInner-IIRaFr:not(.banner-1rJmju) {
+    border-radius: 50px;
 }
 
 .theme-dark .imageUploaderIcon-2OHmFu {
@@ -1351,9 +1355,51 @@ background-color: transparent  !important;
     background-color: transparent;
 }
 
-.userPopout-2j1gM4 {
-    background-color: rgba(0,0,0,.5);
+.profileBadges-31rDHI {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+
+
+.userProfileOuterUnthemed-2b2rsv {
+    background-color: transparent;
+}
+
+.userProfileInner-3F03PX:before {
+    background-color: transparent;
+}
+
+.overlayBackground-1KgwVi {
+    background-color: transparent;
+}
+
+.userPopoutOuter-3AVBmJ {
     box-shadow: none;
+}
+
+.messageInputContainer-2rGDH8 {
+    border: 1px solid transparent;
+}
+
+.userProfileOuter-1K_BYU {
+    border-radius: 6px;
+}
+
+.userProfileInnerNonPremium-1XjSjn {
+    background-color: rgba(0,0,0,.5);
+}
+
+.userProfileInnerWithBanner-3CJ1Og {
+    background-color: rgba(0,0,0,.5);
+}
+
+.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
+.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+    background: none;
+}
+
+.userProfileInner-3F03PX {
+    border-radius: 6px 6px 0 0;
 }
 
 .scrollableContainer-15eg7h {
@@ -1536,21 +1582,18 @@ background-color: transparent  !important;
     background-color: rgba(255, 68, 68, .54);
 }
 
-.userInfoSection-2u2hir+.userInfoSection-2u2hir {
+.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
     border-top: none;
 }
 
-.connectedAccountContainer-SlCC-S {
+.connectedAccountContainer-3aLMHJ {
     background-color: rgba(255, 68, 68, .12);
     border-radius: 6px;
     border: 2px solid;
     border-color: #F44;
 }
 
-.bodyInnerWrapper-2bQs1k, .footer-3naVBw {
-    background-color: transparent;
-    color: white;
-}
+
 
 .avatarHint-k7pYop {
     position: absolute;
@@ -1575,7 +1618,7 @@ background-color: transparent  !important;
     background-color: rgba(255, 68, 68, .6);
 }
 
-.listRow-2nO1T6:hover {
+.listRow-Y5zoF8:hover {
     background-color: transparent;
     border: 2px solid #C67;
 }
@@ -2589,7 +2632,7 @@ background-color: transparent  !important;
 .chat-25x62K:before {
     box-shadow: none;
 }
-.container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-2qVG6q.isOpen-2OXbFs {
     background-color: rgba(255, 68, 68, .8);
     -webkit-transform: none;
     transform: none;
