--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 3
+ * @version 3.1
  */
 
  .app-2CXKsg {
@@ -1176,21 +1176,56 @@
     border: 2px inset #61A5D8;
 }
 
+.profileBadges-31rDHI {
+    background-color: rgba(0, 0, 0, .2);
+}
 
-.userPopout-2j1gM4 {
+
+.userProfileOuterUnthemed-2b2rsv {
+    background-color: transparent;
+}
+
+.overlayBackground-1KgwVi {
+    background-color: transparent;
+}
+
+.messageInputContainer-2rGDH8 {
+    border: 1px solid transparent;
+}
+
+.userPopoutOuter-3AVBmJ {
     box-shadow: none;
-    background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
+}
+
+.userProfileOuter-1K_BYU {
     border-radius: 3px;
+}
+
+.userProfileInner-3F03PX:before {
+    background-color: transparent;
+}
+
+.userProfileInnerNonPremium-1XjSjn {
+    background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
+}
+
+.userProfileInnerWithBanner-3CJ1Og {
+    background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
+}
+
+.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
+.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+    background: none;
+}
+
+.userProfileInner-3F03PX {
+    border-radius: 3px 3px 0 0;
 }
 
 .activity-2EQDZv {
     color: white;
 }
 
-.bodyInnerWrapper-2bQs1k, .footer-3naVBw {
-    background-color: transparent;
-    color: white;
-}
 
 .avatar-2Vndt_, .avatar-3QF_VA {
     border: none;
@@ -1229,7 +1264,7 @@
     background-color: transparent;
 }
 
-.connectedAccountContainer-SlCC-S {
+.connectedAccountContainer-3aLMHJ {
     background-color: rgba(97, 165, 216, .32);
     border-radius: 6px;
     border: 1px solid #61A5D8;
@@ -1239,7 +1274,7 @@
     fill: #61A5D8;
 }
 
-.listRow-2nO1T6:hover {
+.listRow-Y5zoF8:hover {
     background-color: rgba(26, 26, 26, .6);
 }
 
@@ -1429,6 +1464,10 @@
 .imageUploaderInner-IIRaFr {
     border-radius: 4px;
     background-color: #61A5D8;
+}
+
+.imageUploaderInner-IIRaFr:not(.banner-1rJmju) {
+    border-radius: 50px;
 }
 
 .imageUploaderIcon-2OHmFu {
@@ -2433,7 +2472,7 @@
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
     border: 2px solid #76AAD9;
 }
-.container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-2qVG6q.isOpen-2OXbFs {
     background-color: rgba(97, 165, 216, .7);
     -webkit-transform: none;
     transform: none;
