--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -1935,11 +1935,6 @@
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
-.userPopout-3XzG_A {
-  box-shadow: none;
-  background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
-}
-
 .topSectionXbox-3fWLjS .activity-1ythUs,
 .headerXbox-3G-4PF .activity-11LB_k {
   padding: 16px;
@@ -2136,26 +2131,26 @@
   background-color: transparent;
 }
 
-.tabBarContainer-sCZC4w {
+.tabBarContainer-2UG0vy {
   border-bottom: none;
 }
 
-.connectedAccountContainer-SlCC-S {
+.connectedAccountContainer-3aLMHJ {
   background-color: #9b2742;
   border-radius: 5px;
   border: none;
 }
 
-.userInfoSection-2u2hir+.userInfoSection-2u2hir {
+.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
   border-top: none;
 }
 
-.listRow-2nO1T6 {
+.listRow-Y5zoF8 {
   color: white;
   border: 2px solid transparent;
 }
 
-.listRow-2nO1T6:hover {
+.listRow-Y5zoF8:hover {
   background-color: rgba(155, 39, 66, .84);
   border: 2px solid #ad3950;
 }
@@ -2532,6 +2527,10 @@
   background-color: #9b2742;
 }
 
+.imageUploaderInner-IIRaFr:not(.banner-1rJmju) {
+  border-radius: 50px;
+}
+
 .avatarUploaderInner-p38nm2 foreignObject {
   mask: none;
 }
@@ -2551,7 +2550,7 @@
   box-shadow: none;
 }
 
-.divider-1wtgZ3 {
+.divider-1tWBgZ {
   background-color: transparent;
 }
 
@@ -2925,15 +2924,50 @@
   border-radius: 4px;
 }
 
-.userPopout-2j1gM4 {
-  box-shadow: none;
-  background-color: rgba(0, 0, 0, .4);
+.profileBadges-31rDHI {
+  background-color: rgba(0, 0, 0, .2);
 }
 
-.bodyInnerWrapper-2bQs1k,
-.footer-3naVBw {
+
+.userProfileOuterUnthemed-2b2rsv {
   background-color: transparent;
-  color: white;
+}
+
+.overlayBackground-1KgwVi {
+  background-color: transparent;
+}
+
+.messageInputContainer-2rGDH8 {
+  border: 1px solid transparent;
+}
+
+.userPopoutOuter-3AVBmJ {
+  box-shadow: none;
+}
+
+.userProfileInner-3F03PX:before {
+  background-color: transparent;
+}
+
+.userProfileOuter-1K_BYU {
+  border-radius: 6px;
+}
+
+.userProfileInnerNonPremium-1XjSjn {
+  background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
+}
+
+.userProfileInnerWithBanner-3CJ1Og {
+  background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
+}
+
+.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
+.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+  background: none;
+}
+
+.userProfileInner-3F03PX {
+  border-radius: 6px 6px 0 0;
 }
 
 .controlButton-2PMNom foreignObject,
@@ -3002,7 +3036,7 @@
 .interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
     border: 2px solid black;
 }
-.container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-2qVG6q.isOpen-2OXbFs {
   background-color: rgba(155, 39, 66, .7);
   -webkit-transform: none;
   transform: none;
