Got those sneaky class changes :)

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 3.1
+ * @version 3.2
  */
 
 /* Main Background */
@@ -10,6 +10,12 @@
     background-image: url(https://images5.alphacoders.com/598/598858.jpg);
     background-size: cover;
     background-color: transparent;
+}
+
+
+
+.countContainer-3DOo5v {
+    background-color: #912;
 }
 
 /* Add shade to background */
@@ -985,12 +991,12 @@
     background-color: transparent;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
