--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 3.1
+ * @version 3.2
  */
 
 /* Main Background */
@@ -10,6 +10,11 @@
     background-image: url(https://images3.alphacoders.com/744/744194.png);
     background-size: cover;
     background-color: transparent;
+}
+
+
+.countContainer-3DOo5v {
+    background-color: #2AB;
 }
 
 .theme-dark .perksModal-CLcR1c {
@@ -852,11 +857,11 @@
     background-color: transparent;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
