--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 3.1
+ * @version 3.3
  */
 
 /* Main Background */
@@ -10,6 +10,10 @@
     background-image: url(https://images5.alphacoders.com/854/854590.png);
     background-size: cover;
     background-color: transparent;
+}
+
+.countContainer-3DOo5v {
+    background-color: #F44;
 }
 
 .theme-dark .perksModal-CLcR1c {
@@ -1385,11 +1389,11 @@ background-color: transparent  !important;
     border-radius: 6px;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
     background-color: rgba(0,0,0,.5);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
     background-color: rgba(0,0,0,.5);
 }
 
