--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 3.1
+ * @version 3.2
  */
 
  .app-2CXKsg {
@@ -13,6 +13,14 @@
 
 .theme-dark .perksModal-CLcR1c {
     background-color: transparent;
+}
+
+.theme-dark .uploadModal-2ie9O_ {
+    background-color: transparent;
+}
+
+.countContainer-3DOo5v {
+    background-color: #61a5d8;
 }
 
 .preview-3SR4Rd {
@@ -1205,11 +1213,11 @@
     background-color: transparent;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
 }
 
