--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 3.1
+ * @version 3.3
  */
 
  @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -726,6 +726,10 @@
      background-color: transparent;
      padding: 13px;
  }
+
+.countContainer-3DOo5v {
+    background-color: #008c99;
+}
  
  .theme-dark .footer-VCsJQY {
      box-shadow: none;
@@ -2349,11 +2353,11 @@
     background-color: transparent;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
     background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #008c99 100%);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
     background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #008c99 100%);
 }
 
