--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 3.2
+ * @version 3.3
  */
 
  #app-mount .app-2CXKsg {
@@ -1910,6 +1910,10 @@
   to   { transform: translate(0, -0px); }    
 }
 
+.countContainer-3DOo5v {
+  background-color: #9b2742;
+}
+
 .theme-dark .uploadModal-2ie9O_ {
   box-shadow: none;
 }
@@ -2953,11 +2957,11 @@
   border-radius: 6px;
 }
 
-.userProfileInnerNonPremium-1XjSjn {
+.userProfileInnerThemedNonPremium-1gT-zY {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
-.userProfileInnerWithBanner-3CJ1Og {
+.userProfileInnerThemedWithBanner-2624Yx {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
