--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 3.2
+ * @version 3.4
  */
 
 /* Main Background */
@@ -861,7 +861,8 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx {
+.userProfileInnerThemedWithBanner-2624Yx,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
@@ -1883,7 +1884,12 @@
     background-color: transparent;
 }
 
-.icon-mJhEWn {
+.clear-2gkgln {
+    color: gold;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
     background-color: #2AB;
     border-radius: 4px;
     color: white;
@@ -2839,6 +2845,31 @@
   border-top-color: #2AB;
 }
 
+.sortButton-n-cIAH {
+    border-radius: 4px;
+    background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+    color: white;
+}
+
+.container-2d0jMv {
+    background-color: rgba(0,0,0,.8);
+    box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+    color: #2AB;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+    color: white !important;
+}
+
+.tag-3Upstw {
+    background-color: rgba(255,255,255,.08) !important;
+}
 
 
 
