--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 3.3
+ * @version 3.4
  */
 
 /* Main Background */
@@ -1393,7 +1393,8 @@ background-color: transparent  !important;
     background-color: rgba(0,0,0,.5);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx {
+.userProfileInnerThemedWithBanner-2624Yx,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
     background-color: rgba(0,0,0,.5);
 }
 
@@ -2238,11 +2239,6 @@ background-color: transparent  !important;
     box-shadow: none;
 }
 
-.icon-mJhEWn {
-    background-color: #f44;
-    border-radius: 5px;
-    color: white;
-}
 
 .container-2rzKKA {
     background-color: rgba(0,0,0,.3);
@@ -2419,7 +2415,12 @@ background-color: transparent  !important;
     background-color: transparent;
 }
 
-.icon-mJhEWn {
+.clear-2gkgln {
+    color: gold;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
     background-color: #f44;
     border-radius: 4px;
     color: white;
@@ -3123,6 +3124,32 @@ background-color: transparent;
 
 .theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
 border-top-color: #f44;
+}
+
+.sortButton-n-cIAH {
+    border-radius: 4px;
+    background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+    color: white;
+}
+
+.container-2d0jMv {
+    background-color: rgba(0,0,0,.8);
+    box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+    color: #f44;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+    color: white !important;
+}
+
+.tag-3Upstw {
+    background-color: rgba(255,255,255,.08) !important;
 }
 
 
