--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 3.3
+ * @version 3.4
  */
 
  #app-mount .app-2CXKsg {
@@ -2801,7 +2801,12 @@
   background-color: #380d0d;
 }
 
-.icon-mJhEWn {
+.clear-2gkgln {
+  color: gold;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
   background-color: #9b2742;
   border-radius: 4px;
   color: white;
@@ -2961,7 +2966,8 @@
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx {
+.userProfileInnerThemedWithBanner-2624Yx,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
@@ -3518,4 +3524,30 @@ background-color: transparent;
 
 .theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
 border-top-color: #9b2742;
+}
+
+.sortButton-n-cIAH {
+  border-radius: 4px;
+  background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+  color: white;
+}
+
+.container-2d0jMv {
+  background-color: rgba(0,0,0,.8);
+  box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+  color: #9b2742;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+  color: white !important;
+}
+
+.tag-3Upstw {
+  background-color: rgba(255,255,255,.08) !important;
 }
