--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 1
+ * @version 1.1
 */
 
 /* Rem Main Picture */
@@ -259,7 +259,8 @@
 }
 
 .userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-1gT-zY,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
     background: url(https://images5.alphacoders.com/734/734070.png) 50%/cover;
 }
 
@@ -2313,7 +2314,26 @@
     background-color: transparent;
 }
 
-.icon-mJhEWn {
+.emptyStateContainer-xWOMPJ {
+    background-color: transparent;
+}
+
+.container-3arpDl {
+    background-color: rgba(0, 0, 0, .2);
+    border: none;
+}
+
+.container-3arpDl .guidelines-jQLwyH a {
+    color: #D0DFFF;
+}
+
+.descriptionContainer-2ylKGk {
+    background-color: transparent;
+    border-radius: 4px;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
     background-color: #6cb4fe;
     border-radius: 4px;
     color: white;
@@ -2899,4 +2919,30 @@
 
 .benefitsSection-2VIuyT:not(:last-child) {
     border: none;
+}
+
+.sortButton-n-cIAH {
+    border-radius: 4px;
+    background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+    color: white;
+}
+
+.container-2d0jMv {
+    background-color: rgba(0, 0, 0, .8);
+    box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+    color: #6cb4fe;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+    color: white !important;
+}
+
+.tag-3Upstw {
+    background-color: rgba(255, 255, 255, .08) !important;
 }
