--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 3.2
+ * @version 3.4
  */
 
 /* Main Background */
@@ -996,7 +996,8 @@
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx {
+.userProfileInnerThemedWithBanner-2624Yx,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
@@ -1946,7 +1947,12 @@
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.icon-mJhEWn {
+.clear-2gkgln {
+    color: gold;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
     background-color: #912;
     border-radius: 4px;
     color: white;
@@ -2908,6 +2914,32 @@
   
 .theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
   border-top-color: #912;
+}
+
+.sortButton-n-cIAH {
+    border-radius: 4px;
+    background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+    color: white;
+}
+
+.container-2d0jMv {
+    background-color: rgba(0,0,0,.8);
+    box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+    color: #912;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+    color: white !important;
+}
+
+.tag-3Upstw {
+    background-color: rgba(255,255,255,.08) !important;
 }
 
 /* Main Color */
