--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 1
+ * @version 1.1
 */
 
 /* Ram Main Picture */
@@ -254,7 +254,8 @@
 }
 
 .userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-1gT-zY,
+.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
     background-image: linear-gradient(30deg, rgba(0,0,0,.6), rgba(0,0,0,.4)), url(https://images7.alphacoders.com/711/711890.png);
     background-size: cover;
     background-position: 50% 50%;
@@ -2347,7 +2348,26 @@
     background-color: transparent;
 }
 
-.icon-mJhEWn {
+.emptyStateContainer-xWOMPJ {
+    background-color: transparent;
+}
+
+.container-3arpDl {
+    background-color: rgba(0, 0, 0, .2);
+    border: none;
+}
+
+.container-3arpDl .guidelines-jQLwyH a {
+    color: #D0DFFF;
+}
+
+.descriptionContainer-2ylKGk {
+    background-color: transparent;
+    border-radius: 4px;
+}
+
+.icon-mJhEWn,
+.icon-2yhmi8 {
     background-color: #f3acc5;
     border-radius: 4px;
     color: white;
@@ -2932,4 +2952,30 @@
 
 .benefitsSection-2VIuyT:not(:last-child) {
     border: none;
+}
+
+.sortButton-n-cIAH {
+    border-radius: 4px;
+    background-color: #1c1c1c;
+}
+
+.sortButtonInner-kKNTP9 {
+    color: white;
+}
+
+.container-2d0jMv {
+    background-color: rgba(0, 0, 0, .8);
+    box-shadow: none;
+}
+
+.selectedIcon-rQFEab {
+    color: #f3acc5;
+}
+
+.optionText-_ulaHG[style*="color:"] {
+    color: white !important;
+}
+
+.tag-3Upstw {
+    background-color: rgba(255, 255, 255, .08) !important;
 }
